# SuperGlue_ROS

./: .gitignore  .gitmodules  CMakeLists.txt  matcher_service.py  package.xml  rosservice.py  simple_service.py  test_export.py
msg/: Keypoint.msg  KeypointsDict.msg
scripts/: detector_node.py  matcher_node.py  test_node.py  vo_node.py
srv/: ClearBuffer.srv  MatchImages.srv  MatchToTemplate.srv  RegisterImage.srv
tests/: test_export.py  test_matcher_service.py
tools/: PinholeCamera.py  superglue.py  superpoint.py  tools.py
utils/: utils.py
wrappers/: bf.py  coarse_loftr.py  interface.py  loftr.py  superglue.py  superpoint.py
