<?xml version="1.0"?>
<package format="2">
  <name>SuperGlue_ROS</name>
  <version>0.0.0</version>
  <description>The SuperGlue_ROS package</description>

  <maintainer email="amadeus.winarto@u.nus.edu">Amadeus Winarto</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <depend>image_transport</depend>
  <depend>camera_models</depend>
</package>
